Fix picture element width stretching
- Added `width: fit-content;` to `picture` element

Prevents `<picture>` from taking full container width when displaying responsive images.

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ img,
 svg,
 video,
 picture { display: block; height: auto; max-width: 100%; }
+picture { width: fit-content; }
 #wrap { width: calc(100% - 200px); margin: 0 auto; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
 .container { background: #fff; padding: 30px; margin-top: 10px; box-shadow: var(--u-box-shadow)}
 .has-sidebar { float: left; width: calc(100% - 300px); }
